# oracel

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  STRATEGY.md  bot_runner.sh  config.example.json  config.json  config.toml  report.sh  run_bot.sh  rustfmt.toml  status.sh  status_monitor.py  watch.sh
.github/workflows/: ci.yml
dashboard/: components.json  index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: Dashboard.tsx  DirectionChart.tsx  EquityChart.tsx  ErrorBoundary.tsx  Header.tsx  HourlyChart.tsx  PerformanceCard.tsx  StatsCards.tsx  TimeWindowMonitor.tsx  TradesTable.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  table.tsx
dashboard/src/hooks/: useDashboardData.ts
dashboard/src/lib/: csv-parser.ts  dashboard-types.ts  format.ts  stats.ts
deploy/: polybot.service
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  MODULES.md  README.md  STRATEGY.md  ctf-exchange-contracts.md  polymarket-clob-api.md  polymarket-strategy-patterns.md  rust-dependency-analysis.md  rust-trading-bot-patterns.md
docs/superpowers/plans/: 2025-03-24-decider-optimization.md  2026-03-19-paper-live-data-separation.md  2026-03-21-module-audit.md  2026-03-29-performance-optimization.md  2026-04-02-css-audit-fixes.md  2026-04-02-fix-redundancies-and-bugs.md  2026-04-03-oklch-theme-modernization.md
docs/superpowers/specs/: 2025-03-24-decider-optimization-design.md  2026-03-19-paper-live-data-separation-design.md  2026-04-03-oklch-theme-modernization-design.md
scripts/: watch.sh
src/: bot.rs  cli.rs  config.rs  lib.rs  main.rs  signing.rs  state.rs  tasks.rs  trade_log.rs  types.rs  util.rs
src/data/: binance.rs  chainlink.rs  coinbase.rs  market_discovery.rs  mod.rs  polymarket.rs
src/pipeline/: btc_history.rs  decider.rs  executor.rs  mod.rs  momentum.rs  price_source.rs  settler.rs  signal.rs  test_helpers.rs
src/tui/: event.rs  keys.rs  mod.rs  state.rs  ui.rs
