[package]
name = "polymarket-5m-bot"
version = "0.2.0"
edition = "2021"
description = "Automated trading bot for Polymarket BTC 5m markets - Chainlink oracle strategy"
license = "MIT"

[[bin]]
name = "polybot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
ethers = { version = "2", features = ["ws"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rust_decimal = { version = "1", features = ["serde"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
