[package]
name = "polymarket-5m-bot"
version = "0.3.0"
edition = "2021"
description = "Automated trading bot for Polymarket BTC 5m markets - Chainlink oracle strategy"
license = "MIT"

[[bin]]
name = "polybot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
rust_decimal = { version = "1", features = ["serde"] }
polymarket-client-sdk = { version = "0.4", features = ["clob", "ctf"] }
alloy = { version = "1.6", default-features = false, features = ["signer-local", "signers", "contract", "providers", "provider-http", "transports", "transport-http"] }
secrecy = "0.10"
rustls = { version = "0.23", features = ["ring"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
